src/objects/CAREDataTransferTranscript__c.object
<CustomObject>
    <description>Object for migration of transcript entries</description>
    <fields>
        <fullName>AIDM__c</fullName>
        <label>AIDM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPL_SEQ_Number__c</fullName>
        <label>APPL SEQ Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Degree_Earned__c</fullName>
        <label>Date Degree Earned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_End__c</fullName>
        <label>Date End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Start__c</fullName>
        <label>Date Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DegreeType__c</fullName>
        <label>Degree Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Earned__c</fullName>
        <label>Degree Earned</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Expected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inst_City__c</fullName>
        <label>Inst City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inst_Name__c</fullName>
        <label>Inst Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inst_State__c</fullName>
        <label>Inst State</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inst_Zip__c</fullName>
        <label>Inst Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsEvaluation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Evaluation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <label>Minor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recieved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recieved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBGI_Code__c</fullName>
        <label>SBGI Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ_Number__c</fullName>
        <label>SEQ Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit__c</fullName>
        <label>Submit Transcript</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>CARE Data Transfer Transcript</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_End__c</columns>
        <columns>Date_Start__c</columns>
        <columns>Degree_Earned__c</columns>
        <columns>DegreeType__c</columns>
        <columns>Inst_Name__c</columns>
        <columns>Major__c</columns>
        <columns>Minor__c</columns>
        <columns>SBGI_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CARE Data Transfer Transcript Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CARE Data Transfer Transcripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>